<resources>
    <string name="app_name">Socio Infonavit</string>
    <string name="logo_description">Logo de la institución</string>
    <string name="forget_password">¿Olvidaste tu contraseña?</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Entrar</string>
    <string name="email_error">Ingrese un email válido</string>
    <string name="credentials_error">Usuario o contraseña incorrectos</string>

    <string name="footer_app">22/09/2021</string>
    <string name="network_error">Error de red</string>
    <string name="title_activity_benevits">BenevitsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="benevits">Benevits</string>
    <string name="logout">Cerrar sesión</string>
    <string name="logout_question">¿Estas seguro de que deseas cerrar sesión?</string>
    <string name="confirm_alert">Aceptar</string>
    <string name="cancel_alert">Cancelar</string>
    <string name="lo_quiero">Lo quiero</string>
    <string name="error">Error</string>
    <string name="generic_error_description"> <b>Error %1$d</b>\n Inténtalo más tarde</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>